<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/settings_preferences_title">
        <SwitchPreference
            android:key="pref_theme"
            android:defaultValue="false"
            android:title="@string/settings_theme"/>
        <ListPreference
            android:key="pref_language"
            android:defaultValue="en"
            android:title="@string/settings_language"
            android:entries="@array/settings_language_option"
            android:entryValues="@array/settings_language_option_values" />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/settings_security_title">
        <EditTextPreference android:title="@string/settings_change_nick"
            android:summary="@string/settings_change_nick_summary"
            android:inputType="text"
            android:key="pref_nick"/>
        <EditTextPreference android:title="@string/settings_change_password"
            android:summary="@string/settings_change_password_summary"
            android:inputType="textPassword"
            android:key="pref_password"/>
        <EditTextPreference android:title="@string/settings_delete_account"
            android:summary="@string/settings_delete_account_summary"
            android:inputType="textPassword"
            android:key="pref_deletion"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/settings_about_title">
        <Preference
            android:title="@string/settings_version"
            android:summary="@string/settings_version_summary"/>
    </PreferenceCategory>
</PreferenceScreen>