<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.galleon.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.galleon.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_create"
        android:name="com.example.galleon.ui.create.CreateFragment"
        android:label="@string/title_create"
        tools:layout="@layout/fragment_create"
        />

    <fragment
        android:id="@+id/navigation_friendlist"
        android:name="com.example.galleon.ui.friendlist.FriendlistFragment"
        android:label="@string/title_friend_list"
        tools:layout="@layout/fragment_friendlist" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.galleon.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/profile_popup_menu"
        android:name="com.example.galleon.ui.profile.ProfileFragment"
        android:label="@string/profile_popup_menu_item3"
        tools:layout="@layout/fragment_profile" />
</navigation>