<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_bnb"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_search_bnb"
        android:title="@string/title_search" />

    <item
        android:id="@+id/navigation_placeholder"
        android:title=""/>

    <item
        android:id="@+id/navigation_friendlist"
        android:icon="@drawable/ic_friendlist_bnb"
        android:title="@string/title_friend_list" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile_bnb"
        android:title="@string/title_profile" />

</menu>